# stockscreener

./: .gitignore  CLAUDE.md  README.ko.md  README.md  __init__.py  api_client.py  architecture.md  backtest.py  code_analysis_20250808.md  config.py  enhanced_config.json  gui.py  next.config.js  output.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_metadata.json  setup.py  setup.sh  stock_screener.py  tailwind.config.ts  test_gui_preset.py  transfer.md  tsconfig.json  vercel.json
.github/workflows/: ci.yml  scheduled-screening.yml
analyzers/: sentiment_analyzer.py  valuation_analyzer.py
api/python/: api_client.py  backtest.py  cache.py  config.py  config_model.py  data_processing.py  exceptions.py  gui_helpers.py  historical_data.py  metadata_manager.py  models.py  output.py  quality_scorer.py  rate_limiter.py  stock_screener.py
api/python/analyzers/: __init__.py  base_analyzer.py  growth_analyzer.py  risk_analyzer.py
api/routes/: screening.py
app/: globals.css  layout.tsx
app/api/screening/results/: route.ts
app/api/screening/start/: route.ts
app/api/screening/status/: route.ts
components/: Dashboard.tsx  FilterPanel.tsx  StatsCard.tsx  StockTable.tsx
src/: gui_helpers.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/analyzers/: __init__.py  test_growth_analyzer.py  test_risk_analyzer.py
types/: screening.ts  stock.ts
